
2.96  2012-05-20
  - Added merge method to Mojo::Path.
  - Improved documentation.
  - Improved tests.
  - Fixed small Mojo::URL and Mojo::Path stringification bugs.

2.95  2012-05-10
  - Improved documentation.
  - Fixed bug that caused inactivity timeouts to be logged too often.

2.94  2012-05-09
  - Added support for 308 redirects to Mojo::UserAgent.
  - Added support for new HTTP status codes.
  - Improved exception handling of all scripts.
  - Improved built-in web servers to log inactivity timeouts as debug messages
    instead of errors.
  - Improved documentation.
  - Fixed html_escape to always use entities with semicolon. (OlegG, crab)
  - Fixed typo in 414 status message.
  - Fixed small cookie formatting bug.
  - Fixed small bug in cookie parser.
  - Fixed small backlog bug in Mojo::Server::Daemon.

2.93  2012-05-05
  - Added remove method to Mojolicious::Routes::Route.
  - Improved 32bit Perl support of Mojo::Transaction::WebSocket.
    (mikemagowan, sri)
  - Improved exception handling of application and config file loaders.
  - Improved exception handling of Mojolicious::Plugin::I18N.
  - Improved renderer log messages.
  - Improved documentation.
  - Improved tests.
  - Fixed bug that prevented helper names from starting with "end". (Akron)
  - Fixed bug that prevented helper names from ending with "begin".
  - Fixed empty frame handling in Mojo::Transaction::WebSocket.
  - Fixed small rendering bug in Mojolicious::Plugin::PODRenderer.
  - Fixed small code generation bug in Mojolicious::Plugin::I18N.
  - Fixed small escaping bug in Mojo::URL.

2.92  2012-04-30
  - Added commands attribute to Mojolicious.
  - Improved documentation.
  - Improved tests.
  - Fixed attribute namespace selector bugs in Mojo::DOM::CSS.

2.91  2012-04-26
  - Added cookies method to Mojo::Message.
  - Updated HTML5 entities in Mojo::Util.
  - Improved documentation.

2.90  2012-04-25
  - Fixed small JavaScript bug in Mojolicious::Plugin::PODRenderer.

2.89  2012-04-24